--- a/api/qsharp/Microsoft.Quantum.ErrorCorrection.yml
+++ b/api/qsharp/Microsoft.Quantum.ErrorCorrection.yml
@@ -20,12 +20,8 @@ functions:
 - uid: microsoft.quantum.errorcorrection.steanecoderecoveryz
   summary: ⟦7，1，3⟧ Steane 量程代码的 "稳定" 组 Z 部分的解码器。
 - uid: microsoft.quantum.errorcorrection.tablelookuprecovery
-  summary: 对于给定的 qubits 寄存器上的 Pauli 操作表，此函数返回一个类型`RecoveryFn`为的对象，该对象包含对给定的 Pauli 操作数组执行表查找解码所需的所有信息。
+  summary: 对于给定的 qubits 寄存器上的 Pauli 操作表，此函数返回一个类型为的对象，该对象 `RecoveryFn` 包含对给定的 Pauli 操作数组执行表查找解码所需的所有信息。
 operations:
-- uid: microsoft.quantum.errorcorrection.bitflipdecoder
-  summary: "\n> [!WARNING]\n> 不推荐使用\n\nBitFlipDecoder 已被弃用。 请改用 @\"microsoft.quantum.errorcorrection.decodefrombitflipcode\"。\n请使用 @\"microsoft.quantum.errorcorrection.encodeintobitflipcode\"。"
-- uid: microsoft.quantum.errorcorrection.bitflipencoder
-  summary: "\n> [!WARNING]\n> 不推荐使用\n\nBitFlipEncoder 已被弃用。 请改用 @\"microsoft.quantum.errorcorrection.encodeintobitflipcode\"。\n请使用 @\"microsoft.quantum.errorcorrection.encodeintobitflipcode\"。"
 - uid: microsoft.quantum.errorcorrection.decodefrombitflipcode
   summary: 从 [3，1，3]/⟦3，1，1⟧位翻转代码进行解码。
 - uid: microsoft.quantum.errorcorrection.decodefromfivequbitcode
@@ -38,10 +34,6 @@ operations:
   summary: 编码为⟦5，1，3⟧量程代码。
 - uid: microsoft.quantum.errorcorrection.encodeintosteanecode
   summary: 一种编码操作，用于将未编码的量程寄存器映射到⟦7，1，3⟧ Steane 量程代码下的编码的量程寄存器。
-- uid: microsoft.quantum.errorcorrection.fivequbitcodedecoder
-  summary: "\n> [!WARNING]\n> 不推荐使用\n\nFiveQubitCodeDecoder 已被弃用。 请改用 @\"microsoft.quantum.errorcorrection.decodefromfivequbitcode\"。\n请使用 @\"microsoft.quantum.errorcorrection.decodefromfivequbitcode\"。"
-- uid: microsoft.quantum.errorcorrection.fivequbitcodeencoder
-  summary: "\n> [!WARNING]\n> 不推荐使用\n\nFiveQubitCodeEncoder 已被弃用。 请改用 @\"microsoft.quantum.errorcorrection.encodeintofivequbitcode\"。\n请使用 @\"microsoft.quantum.errorcorrection.encodeintofivequbitcode\"。"
 - uid: microsoft.quantum.errorcorrection.injectpi4yrotation
   summary: 围绕 Y 轴旋转单个 qubit 乘以π/4。
 - uid: microsoft.quantum.errorcorrection.knilldistill
@@ -49,16 +41,12 @@ operations:
 - uid: microsoft.quantum.errorcorrection.measurestabilizergenerators
   summary: 度量稳定组的给定生成器集。
 - uid: microsoft.quantum.errorcorrection.recover
-  summary: 按`QECC`类型描述的量程代码执行一轮错误更正。
+  summary: 按类型描述的量程代码执行一轮错误更正 `QECC` 。
 - uid: microsoft.quantum.errorcorrection.recovercss
-  summary: 按`CSS`类型描述的量程代码执行一轮错误更正。
-- uid: microsoft.quantum.errorcorrection.steanecodedecoder
-  summary: "\n> [!WARNING]\n> 不推荐使用\n\nSteaneCodeDecoder 已被弃用。 请改用 @\"microsoft.quantum.errorcorrection.decodefromsteanecode\"。\n请使用 @\"microsoft.quantum.errorcorrection.decodefromfivequbitcode\"。"
-- uid: microsoft.quantum.errorcorrection.steanecodeencoder
-  summary: "\n> [!WARNING]\n> 不推荐使用\n\nSteaneCodeEncoder 已被弃用。 请改用 @\"microsoft.quantum.errorcorrection.encodeintosteanecode\"。\n请使用 @\"microsoft.quantum.errorcorrection.decodefromfivequbitcode\"。"
+  summary: 按类型描述的量程代码执行一轮错误更正 `CSS` 。
 newtypes:
 - uid: microsoft.quantum.errorcorrection.css
-  summary: 表示 Calderbank –选定– Steane （CSS）代码，该代码由其编码器、解码器定义，并分别表示`X`和`Z`错误的症状度量过程。
+  summary: 表示 Calderbank –选定– Steane （CSS）代码，该代码由其编码器、解码器定义，并分别表示和错误的症状度量过程 `X` `Z` 。
 - uid: microsoft.quantum.errorcorrection.decodeop
   summary: >-
     表示一个操作，该操作将编码的寄存器解码为物理寄存器，并使用 qubits 来记录一个症状。
@@ -72,19 +60,19 @@ newtypes:
 
     第一个参数被视为将进行编码的物理寄存器，而第二个参数被视为将使用的暂存寄存器。
 - uid: microsoft.quantum.errorcorrection.logicalregister
-  summary: 用于注册逻辑 qubits 的物理`Qubit[]` qubits 的类型。
+  summary: 用于注册逻辑 qubits 的物理 qubits 的类型 `Qubit[]` 。
 - uid: microsoft.quantum.errorcorrection.qecc
   summary: 表示由其编码器、解码器和症状度量过程定义的纠错码。
 - uid: microsoft.quantum.errorcorrection.recoveryfn
-  summary: 用于将错误症状映射到一系列可更正检测到`Pauli[]`的错误的操作的类型。
+  summary: 用于将错误症状映射到一系列可 `Pauli[]` 更正检测到的错误的操作的类型。
 - uid: microsoft.quantum.errorcorrection.syndrome
-  summary: 指定量程代码的`Result[]`错误症状的度量结果的类型。
+  summary: '`Result[]`指定量程代码的错误症状的度量结果的类型。'
 - uid: microsoft.quantum.errorcorrection.syndromemeasop
   summary: 表示一个操作，该操作用于测量纠错代码块的症状。
 metadata:
-  ms.openlocfilehash: b4d7aaa55fee7e99b9c96ebf3cecb36706a66062
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: eed1de587e6bfbfc197113c5cd280ae72df1ce7e
+  ms.sourcegitcommit: a35498492044be4018b4d1b3b611d70a20e77ecc
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82673326"
+  ms.lasthandoff: 06/03/2020
+  ms.locfileid: "84326602"
