--- a/api/qsharp/Microsoft.Quantum.Measurement.yml
+++ b/api/qsharp/Microsoft.Quantum.Measurement.yml
@@ -9,19 +9,19 @@ operations:
 - uid: microsoft.quantum.measurement.measurewithscratch
   summary: 使用显式暂存 qubit 度量给定的 Pauli 运算符以执行测量。
 - uid: microsoft.quantum.measurement.mresetx
-  summary: 在 X 基础上测量单个 qubit，并将其重置为标准基础状态 | 0 〉后面的度量。
+  summary: 在 X 基础上测量单个 qubit，并将其重置为固定的初始状态。
 - uid: microsoft.quantum.measurement.mresety
-  summary: 按 Y 度量单个 qubit，并将其重置为标准基础状态 | 0 〉之后的度量。
+  summary: 按 Y 度量单个 qubit，并将其重置为测量后的固定初始状态。
 - uid: microsoft.quantum.measurement.mresetz
-  summary: '`Z`基于度量单个 qubit，并将其重置为标准基础状态 | 0 〉之后的度量。'
+  summary: 度量 Z 基准中的单个 qubit，并将其重置为固定的初始状态。
 - uid: microsoft.quantum.measurement.multim
   summary: 按标准度量给定数组中的每个 qubit。
 - uid: microsoft.quantum.measurement.settobasisstate
   summary: 通过测量 qubit 并在需要时应用位翻转，将 qubit 设置为给定的计算基础状态。
 metadata:
-  ms.openlocfilehash: 8e0910bf53734ffe65aa12b06321ec9b3403133f
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 894c0bb7f0b57e9fe04837b89cd57345745df6c5
+  ms.sourcegitcommit: a35498492044be4018b4d1b3b611d70a20e77ecc
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82673147"
+  ms.lasthandoff: 06/03/2020
+  ms.locfileid: "84326619"
