--- a/api/qsharp/microsoft.quantum.measurement.mresetx.yml
+++ b/api/qsharp/microsoft.quantum.measurement.mresetx.yml
@@ -3,7 +3,11 @@ uid: microsoft.quantum.measurement.mresetx
 name: MResetX
 type: operation
 namespace: Microsoft.Quantum.Measurement
-summary: 在 X 基础上测量单个 qubit，并将其重置为标准基础状态 | 0 〉后面的度量。
+summary: >-
+  在 X 基础上测量单个 qubit，并将其重置为固定的初始状态。
+
+
+  以 $X $ 基数执行单 qubit 度量，并确保 qubit 返回到 {0} 度量值后的 $ \ket $。
 syntax: 'operation MResetX (target : Qubit) : Result'
 input:
   content: '(target : Qubit)'
@@ -15,13 +19,13 @@ input:
 output:
   content: Result
   types:
-  - summary: Pauli 中测量`target`的结果 $X $ basis。
+  - summary: Pauli 中测量的结果 `target` $X $ basis。
     isPrimitive: true
     uid: Result
 metadata:
-  ms.openlocfilehash: de0422b51d7772892919ee1faeff1f27e9d0616b
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 72df2fcf966fcda09ef35e644007e713780e7a68
+  ms.sourcegitcommit: a35498492044be4018b4d1b3b611d70a20e77ecc
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82681411"
+  ms.lasthandoff: 06/03/2020
+  ms.locfileid: "84327435"
