--- a/api/qsharp/microsoft.quantum.measurement.mresetz.yml
+++ b/api/qsharp/microsoft.quantum.measurement.mresetz.yml
@@ -3,7 +3,11 @@ uid: microsoft.quantum.measurement.mresetz
 name: MResetZ
 type: operation
 namespace: Microsoft.Quantum.Measurement
-summary: '`Z`基于度量单个 qubit，并将其重置为标准基础状态 | 0 〉之后的度量。'
+summary: >-
+  度量 Z 基准中的单个 qubit，并将其重置为固定的初始状态。
+
+
+  以 $Z $ 基数执行单 qubit 度量，并确保 qubit 返回到 {0} 度量值后的 $ \ket $。
 syntax: 'operation MResetZ (target : Qubit) : Result'
 input:
   content: '(target : Qubit)'
@@ -15,13 +19,13 @@ input:
 output:
   content: Result
   types:
-  - summary: Pauli 中测量`target`的结果 $Z $ basis。
+  - summary: Pauli 中测量的结果 `target` $Z $ basis。
     isPrimitive: true
     uid: Result
 metadata:
-  ms.openlocfilehash: 28b0de7e447156d327e165f4db01bdf625e984d6
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 02f9e22522e9562068c9e0aea9293c93fc5d4644
+  ms.sourcegitcommit: a35498492044be4018b4d1b3b611d70a20e77ecc
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82681392"
+  ms.lasthandoff: 06/03/2020
+  ms.locfileid: "84327384"
