--- a/api/iqsharp-magic/toc.yml
+++ b/api/iqsharp-magic/toc.yml
@@ -1,3 +1,5 @@
+- href: check_kata.md
+  name: '%check_kata magic 命令'
 - href: chemistry.broombridge.md
   name: '%chemistry.broombridge magic 命令'
 - href: chemistry.encode.md
@@ -12,6 +14,8 @@
   name: '%config magic 命令'
 - href: estimate.md
   name: '%estimate magic 命令'
+- href: kata.md
+  name: '%kata magic 命令'
 - href: lsmagic.md
   name: '%lsmagic magic 命令'
 - href: package.md
