--- a/articles/TOC.yml
+++ b/articles/TOC.yml
@@ -31,6 +31,8 @@
       href: quickstart.md
     - name: 实现 Grover 的搜索算法
       href: quickstarts/search.md
+    - name: Qubit 级编程
+      href: tutorials/qft-tutorial.md
     - name: '通过 Quantum Katas 学习 Q#'
       href: intro-to-katas.md
     - name: 'Q# 代码示例'
