--- a/articles/TOC.yml
+++ b/articles/TOC.yml
@@ -1,59 +1,14 @@
 - name: Microsoft Quantum 文档
   href: index.yml
 - name: 概述
-  items:
-    - name: 量子计算简介
-      href: overview/overview.md
-    - name: 关键概念
-      items:
-        - name: 了解量子计算
-          href: overview/understanding-quantum-computing.md
-        - name: 量子计算机和模拟器
-          href: overview/quantum-computers-and-simulators.md
-        - name: '什么是 Q# 和 QDK？'
-          href: overview/what-is-qsharp-and-qdk.md
-        - name: 用于量子计算的线性代数
-          href: overview/algebra-for-quantum-computing.md
+  href: overview/toc.yml
 - name: 快速入门
-  expanded: true
-  items:
-    - name: QDK 入门
-      href: welcome.md
-    - name: 安装 QDK
-      href: install-guide/toc.yml
-    - name: 更新 QDK
-      href: install-guide/update.md
+  href: quickstarts/toc.yml
 - name: 教程
-  items:
-    - name: 量子随机数生成器
-      href: quickstarts/qrng.md
-    - name: '通过 Q# 探索纠缠'
-      href: quickstart.md
-    - name: 实现 Grover 的搜索算法
-      href: quickstarts/search.md
-    - name: Qubit 级编程
-      href: tutorials/qft-tutorial.md
-    - name: '通过 Quantum Katas 学习 Q#'
-      href: intro-to-katas.md
-    - name: 'Q# 代码示例'
-      href: 'https://docs.microsoft.com/en-us/samples/browse/?languages=qsharp'
-- name: 'Q# 用户指南'
+  href: tutorials/toc.yml
+- name: Q# 用户指南
   href: user-guide/toc.yml
 - name: 概念
-  items:
-    - name: 量子计算概念
-      href: concepts/toc.yml
-    - name: 'Q# 库'
-      href: libraries/toc.yml
+  href: concepts/toc.yml
 - name: 资源
-  items:
-    - name: 术语表
-      href: concepts/Glossary.md
-    - name: 参与编写 QDK
-      href: contributing/toc.yml
-      topicHref: contributing/index.md
-    - name: QDK 发行说明
-      topicHref: relnotes/index.md
-      href: relnotes/toc.yml
-    - name: 进一步阅读
-      href: for-more-info.md
+  href: resources/toc.yml
