--- a/articles/tutorials/toc.yml
+++ b/articles/tutorials/toc.yml
@@ -9,4 +9,4 @@
 - name: 通过 Quantum Katas 学习 Q#
   href: intro-to-katas.md
 - name: Q# 代码示例
-  href: 'https://docs.microsoft.com/en-us/samples/browse/?languages=qsharp'
+  href: 'https://docs.microsoft.com/samples/browse/?languages=qsharp'
